    2. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.
    3. No order is guaranteed for parameters from forms, contrary to the HTML 4.01 spec

Limitations: HttpUnit does not support JavaScript

Revision History:

15-Oct-2001
   Problems corrected:
       1. The http-equiv meta tag was incorrectly matched as "http_equiv"
       2. By default, POSTs included charset attributes which messed up some servlet engines

13-Sep-2001
   Problems corrected:
       1. The refresh handling now recognizes requests with content syntax "<seconds>;<location>" or "<seconds>; URL=<location>"

21-Aug-2001
Acknowledgements:
    Thanks to Richard Scothern for identiying the cause of problems with POST requests and older servlet engines.

    Additions:
       1. HttpUnitOptions now has a postIncludesCharset which can be set to false to interoperate with older servlet
          engines, such as Tomcat 3.1, which cannot handle the charset attribute

13-Aug-2001
Acknowledgements:
    Thanks to Brett Neumeier for some Javadoc fixes and adding support for the non-standard "Charset" header

    Additions:
       1. Now recognizes a Charset header if no charset is specified in the Content-type header.

 8-Aug-2001
Acknowledgements:
    Thanks to Dave Glowacki for the default content-type code.

    Additions:
       1. HttpUnitOptions.setDefaultContentType() lets you define a content-type to use when the web server does not
          supply a Content-Type header.

 2-Aug-2001
    Problems Corrected:
       1. Set-Cookie headers are now processed even on responses with 4xx and 5xx status
       2. WebForm.getOptionValues now returns the options in the order listed in the form for both selections and radio buttons.

31-Jul-2001
    Additions:
       1. Added ID property to SubmitButton and WebLink
       2. Added getSubmitButtonWithID to WebForm